# learnopengl-cpp

./: .gitattributes  .gitignore  CMakeLists.txt
assets/shaders/: basic.frag  basic0.frag  basic1.frag  basic_attrib.frag  basic_attrib.vert  basic_link.vert  basic_multitexture.frag  basic_mvp.vert  basic_texture.frag  basic_texture.vert  basic_transform.vert  lighting_basic.frag  lighting_basic.vert  lighting_trivial_light_source.frag  lighting_trivial_object.frag  xp_animation.frag  xp_animation.vert
src/: config.h  input.h  logging.cpp  logging.h  main.cpp
src/camera/: Camera.cpp  Camera.h  controllers.cpp  controllers.h  projections.cpp  projections.h
src/gl/: StatefulShaderProgram.cpp  StatefulShaderProgram.h  constants.h  shaders.cpp  shaders.h  utils.cpp  utils.h  wrappers.h
src/gl/wrappers/: traits.cpp  traits.h  unique.h
src/input/: Key.h  MouseState.h  receivers.cpp  receivers.h
src/meshes/: Mesh.cpp  Mesh.h  construction.cpp  construction.h
src/textures/: TextureData.cpp  TextureData.h  loading.cpp  loading.h
src/utils/: ScopedGLFW.cpp  ScopedGLFW.h  boost_utils.cpp  boost_utils.h  collection_utils.h  file_utils.cpp  file_utils.h  glfw_utils.h  string_utils.cpp  string_utils.h
src/utils/glfw/: key_mapping.cpp  key_mapping.h  mouse_button_mapping.cpp  mouse_button_mapping.h
